[package]
name = "implhm"
version = "1.0.3"
edition = "2021"

license = "MIT"
readme = "README.md"
repository = "https://github.com/splurf/implhm"
authors = ["Evan Schwartzentruber <evandotschwartzentruber@gmail.com>"]
description = "Simplified library of collision-handling HashMaps"
keywords = ["hashmap", "hash", "map", "collision"]
categories = ["data-structures"]

[features]
default = ["separate-chaining"]

separate-chaining = ["enabled"]
open-addressing = ["enabled"]

double-hashing = ["open-addressing"]
linear-probing = ["open-addressing"]
quadratic-probing = ["open-addressing"]

separate-chaining-test = ["separate-chaining", "test"]
open-addressing-test = ["open-addressing", "test"]

enabled = []
test = []

[dependencies]